<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">1 What is my number?</string>
    <string name="what_is_my_number">What is my number?</string>
    <string name="my_number_is">My number is </string>
    <string name="prefix_text_visible">Prefix Text Visible</string>
    <string name="background_transparent">Background Transparent</string>
    <string name="settings">Settings</string>
    <string name="apply">Apply</string>
    <string name="my_phone_number">My Phone Number</string>
    <string name="prefix_text">Prefix Text</string>
    <string name="text_color">Text Color</string>
    <string name="background_color">Background Color</string>

</resources>